15 July 2014: Wouter
	- Fix NetworkManager script fails t parse nmcli version as of
	  0.9.10.0, patch from Gerald Turner.

3 July 2014: Wouter
	- Patches from Ondrej Sury (from the Debian package):
	  Remove some ugly bashisms from the script.
	  Fixes static paths that right be mismatched (f.e. on multiarch
	  system).
	  Fix IndexError in dnssec-trigger-script, when there less then 4
	  resolvers since you use 3xfields.pop(0) before that.
	  Fix release date in makedist manpage to be more stable.
	  Do substitutions in makefile, more autoconf'y
	  Fixup dnssec-triggerd.service from Makefile.in

1 July 2014: Wouter
	- Better fix for pidof that sets PATH for networkmanager dispatcher
	  script (from Ondrej Sury).

30 June 2014: Wouter
	- Add --with-pidof=/usr/sbin/pidof where you can set the location
	  of the pidof command to use in the Networkmanager script,
	  /usr/bin/pidof or /usr/sbin/pidof (depending no your distribution).

25 June 2014: Wouter
	- Patches from Pavel Simerda:
	  improve systemctl call.
	  serialize script instances.

23 June 2014: Wouter
	- Patches from Pavel Simerda:
	  Fixup for python2.
	  fix a race condition with NetworkManager restart.
	  don't fail on empty connection list.
	  move legacy connection handling to the cleanup phase.
	  don't block on systemctl restart NetworkManager.

20 June 2014: Wouter
	- Patches from Pavel Simerda:
	  fix bug that prevents calling dnssec-trigger-control
	  submit (https://bugzilla.redhat.com/show_bug.cgi?id=1105896)
	  avoid dependency on pidof
	  handle missing resolv.conf backup gracefully
	  upgrade zone cache format at startup (
	  https://bugzilla.redhat.com/show_bug.cgi?id=1111143)
	  always log to stderr

4 June 2014: Wouter
	- Patch from Pavel Simerda. This, among other things, allows to
	  restart unbound and/or dnssec-trigger without restarting
	  NetworkManager when it's configured not to touch the DNS.
	  And, avoid Filenotfounderror not available in python 2,